# OxiCloud

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  build.rs  docker-compose.yml  example.env  justfile
tools/perf-audit/: Cargo.toml  README.md  admin_user_count.sql  admin_user_listing_e2e.rs  admin_user_order_index.sql  admin_user_order_index_pareto.sql  admin_user_order_index_representative.sql  admin_user_projection.sql  cached_range_ab.rs  frontend-dedup-workflow.mjs  frontend-upload-algorithms.mjs  gc_manifest_batch.rs  local_sync_grouping.rs  migration_verify_sampling.sql  migration_workset.rs  queue-memory-gate.mjs  rejected_delta_loose_hit_probe.rs  rejected_refcount_overwrite_probe.rs  run_gc_manifest_batch.sh  run_gc_manifest_bind_rss.sh  run_verify_integrity_prefetch.sh  run_verify_integrity_streaming.sh  verify_integrity_borrowed.rs  verify_integrity_phase1.rs  verify_integrity_streaming.rs  video-thumbnail-server-cli.mjs  video-thumbnail-server.mjs
tools/perf-audit/results/: admin-user-index-representative-postgres18-macos-arm64.json  admin-user-listing-e2e-postgres18-macos-arm64.json  backend-audit-macos-arm64.json  cached_range_exclusive_2026-07-22.json  dedup-batch-10000-node26-macos-arm64.json  dedup-batch-512-node26-macos-arm64.json  dedup-fastpath-1000-repeat-node26-macos-arm64.json  dedup-fastpath-node26-macos-arm64.json  frontend-dedup-workflow-node26-macos-arm64.json  frontend-upload-node26-macos-arm64.json  gc_manifest_batch_2026-07-21.json  migration-verify-sampling-postgres18-macos-arm64.json  migration-workset-postgres18-macos-arm64.json  (+8 more)
(+405 files in other folders)
